--- a/Lab2/gradle/wrapper/gradle-wrapper.properties
+++ b/Lab2/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Mar 05 16:59:48 CST 2021
+#Sun Mar 07 18:08:39 CST 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=file:/Androiddevelooptool/Gradle/gradle-6.5-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
