--- a/Lab8/MediaDemo/app/src/main/AndroidManifest.xml
+++ b/Lab8/MediaDemo/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     package="com.bytedance.mediademo">
 
 <!--    todo,补充权限-->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
